refactor(1.0.x): consolidate modules and align version parity