@@ -21,6 +21,7 @@ import io.ddd4j.sample.order.domain.event.OrderCreatedEvent;
 import io.ddd4j.sample.order.domain.event.OrderPaidEvent;
 
 import java.util.Collection;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -62,16 +63,16 @@ public class OrderSummaryView implements ProjectionView<Object> {
 
     @Override
     public Collection<String> getEventTypes() {
-        return List.of("OrderCreatedEvent", "OrderPaidEvent");
+        return Arrays.asList("OrderCreatedEvent", "OrderPaidEvent");
     }
 
     @Override
     public void handleEvents(Collection<Object> events) {
         for (Object event : events) {
-            if (event instanceof OrderCreatedEvent created) {
-                handleCreated(created);
-            } else if (event instanceof OrderPaidEvent paid) {
-                handlePaid(paid);
+            if (event instanceof OrderCreatedEvent) {
+                handleCreated((OrderCreatedEvent) event);
+            } else if (event instanceof OrderPaidEvent) {
+                handlePaid((OrderPaidEvent) event);
             }
         }
     }
