@@ -15,11 +15,11 @@
 package io.ddd4j.sample.dropwizard;
 
 import io.ddd4j.web.dropwizard.Ddd4jDropwizardWebConfiguration;
-import io.dropwizard.core.Configuration;
+import io.dropwizard.Configuration;
 import lombok.Getter;
 import lombok.Setter;
 
-import java.util.List;
+import java.util.Arrays;
 
 /**
  * Dropwizard Order 示例的应用配置。
@@ -32,7 +32,7 @@ public class DropwizardOrderConfiguration extends Configuration {
 
     private static Ddd4jDropwizardWebConfiguration defaultWebConfiguration() {
         Ddd4jDropwizardWebConfiguration configuration = new Ddd4jDropwizardWebConfiguration();
-        configuration.setPublicPaths(List.of("/health", "/healthcheck/**", "/api/auth/**"));
+        configuration.setPublicPaths(Arrays.asList("/health", "/healthcheck/**", "/api/auth/**"));
         return configuration;
     }
 }
