@@ -19,6 +19,7 @@ import io.ddd4j.kit.lang.StrKit;
 import io.ddd4j.sample.javalin.cqrs.order.domain.event.*;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
@@ -91,7 +92,8 @@ public class Order extends AggregateRoot<String> {
      * @return 草稿订单
      */
     public static Order draft(String orderNo, String buyerId, String buyerName) {
-        Order order = new Order(UUID.randomUUID().toString(), orderNo, buyerId, buyerName, OrderStatus.DRAFT, List.of());
+        Order order = new Order(UUID.randomUUID().toString(), orderNo, buyerId, buyerName,
+                OrderStatus.DRAFT, Collections.emptyList());
         order.registerEvent(new OrderCreatedEvent(order.id()));
         return order;
     }
@@ -123,7 +125,7 @@ public class Order extends AggregateRoot<String> {
      * @return 订单行列表
      */
     public List<OrderLine> lines() {
-        return List.copyOf(lines);
+        return Collections.unmodifiableList(new ArrayList<>(lines));
     }
 
     /**
