@@ -19,6 +19,7 @@ import io.ddd4j.kit.lang.StrKit;
 import io.ddd4j.sample.javalin.satoken.order.domain.event.*;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
@@ -63,7 +64,8 @@ public class Order extends AggregateRoot<String> {
     }
 
     public static Order draft(String orderNo, String buyerId, String buyerName) {
-        Order order = new Order(UUID.randomUUID().toString(), orderNo, buyerId, buyerName, OrderStatus.DRAFT, List.of());
+        Order order = new Order(UUID.randomUUID().toString(), orderNo, buyerId, buyerName,
+                OrderStatus.DRAFT, Collections.emptyList());
         order.registerEvent(new OrderCreatedEvent(order.id()));
         return order;
     }
@@ -90,7 +92,7 @@ public class Order extends AggregateRoot<String> {
     }
 
     public List<OrderLine> lines() {
-        return List.copyOf(lines);
+        return Collections.unmodifiableList(new ArrayList<>(lines));
     }
 
     public Money totalAmount() {
