@@ -22,6 +22,8 @@ import io.ddd4j.sample.javalin.satoken.rbac.domain.repository.PermissionReposito
 import io.ddd4j.sample.javalin.satoken.rbac.domain.repository.RoleRepository;
 import io.ddd4j.sample.javalin.satoken.rbac.domain.repository.UserRepository;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 
@@ -69,13 +71,13 @@ public final class RbacConfig {
 
         // 2) 创建角色并分配权限
         Role adminRole = new Role("R001", "admin", "超级管理员", "拥有全部权限", Role.Status.ENABLED);
-        adminRole.assignPermissions(new HashSet<>(List.of("P001", "P002", "P003", "P004", "P005", "P006")));
+        adminRole.assignPermissions(new HashSet<>(Arrays.asList("P001", "P002", "P003", "P004", "P005", "P006")));
 
         Role userRole = new Role("R002", "user", "普通用户", "基础用户角色", Role.Status.ENABLED);
-        userRole.assignPermissions(new HashSet<>(List.of("P003", "P005")));
+        userRole.assignPermissions(new HashSet<>(Arrays.asList("P003", "P005")));
 
         Role managerRole = new Role("R003", "manager", "业务管理员", "管理商品和订单", Role.Status.ENABLED);
-        managerRole.assignPermissions(new HashSet<>(List.of("P003", "P005", "P006")));
+        managerRole.assignPermissions(new HashSet<>(Arrays.asList("P003", "P005", "P006")));
 
         roleRepository.save(adminRole);
         roleRepository.save(userRole);
@@ -83,13 +85,13 @@ public final class RbacConfig {
 
         // 3) 创建用户并分配角色
         User admin = new User("10001", "admin", "admin", "管理员", User.Status.ENABLED);
-        admin.assignRoles(new HashSet<>(List.of("R001")));
+        admin.assignRoles(new HashSet<>(Collections.singletonList("R001")));
 
         User user = new User("10002", "user", "user", "张三", User.Status.ENABLED);
-        user.assignRoles(new HashSet<>(List.of("R002")));
+        user.assignRoles(new HashSet<>(Collections.singletonList("R002")));
 
         User disabled = new User("10003", "disabled", "disabled", "李四（已禁用）", User.Status.DISABLED);
-        disabled.assignRoles(new HashSet<>(List.of("R002")));
+        disabled.assignRoles(new HashSet<>(Collections.singletonList("R002")));
 
         userRepository.save(admin);
         userRepository.save(user);
