@@ -83,14 +83,14 @@ public class InMemoryUserRepository implements UserRepository {
         return rows.values().stream()
                 .filter(r -> Objects.equals(status.name(), r.status))
                 .map(InMemoryUserRepository::toModel)
-                .toList();
+                .collect(java.util.stream.Collectors.toList());
     }
 
     @Override
     public List<User> findAll() {
         return rows.values().stream()
                 .map(InMemoryUserRepository::toModel)
-                .toList();
+                .collect(java.util.stream.Collectors.toList());
     }
 
     // ============================ 模型与行转换 ============================
