@@ -24,6 +24,9 @@ import io.ddd4j.sample.javalin.shiro.rbac.repository.InMemoryRoleRepository;
 import io.ddd4j.sample.javalin.shiro.rbac.repository.InMemoryUserRepository;
 import io.ddd4j.sample.javalin.shiro.rbac.service.RbacService;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -59,23 +62,23 @@ public final class RbacConfig {
         // ==================== 种子角色 ====================
         // admin：拥有全部权限
         rbacService.saveRole(new Role("admin", "管理员",
-                Set.of("user:list", "user:add", "user:update", "user:delete",
+                new HashSet<>(Arrays.asList("user:list", "user:add", "user:update", "user:delete",
                         "order:create", "order:pay", "order:ship", "order:cancel",
-                        "permission:list", "role:list")));
+                        "permission:list", "role:list"))));
         // user：拥有基本业务权限
         rbacService.saveRole(new Role("user", "普通用户",
-                Set.of("user:list", "order:create", "order:pay")));
+                new HashSet<>(Arrays.asList("user:list", "order:create", "order:pay"))));
 
         // ==================== 种子用户 ====================
         // admin：admin 角色
         rbacService.saveUser(new User("admin", "admin123", "管理员",
-                Set.of("admin"), Set.of()));
+                Collections.singleton("admin"), Collections.emptySet()));
         // zhangsan：user 角色（业务授权：直接拥有 order:pay）
         rbacService.saveUser(new User("zhangsan", "pass123", "张三",
-                Set.of("user"), Set.of("order:pay")));
+                Collections.singleton("user"), Collections.singleton("order:pay")));
         // lisi：user 角色（无额外权限）
         rbacService.saveUser(new User("lisi", "pass123", "李四",
-                Set.of("user"), Set.of()));
+                Collections.singleton("user"), Collections.emptySet()));
     }
 
     /**
@@ -91,30 +94,30 @@ public final class RbacConfig {
             @Override
             public List<String> getPermissionList(AuthPrincipal principal) {
                 if (Objects.isNull(principal)) {
-                    return List.of();
+                    return Collections.emptyList();
                 }
                 Object loginId = principal.getLoginId();
                 if (Objects.isNull(loginId)) {
-                    return List.of();
+                    return Collections.emptyList();
                 }
                 return userRepository.findByLoginId(String.valueOf(loginId))
                         .map(rbacServicePerms(roleRepository))
-                        .orElse(List.of());
+                        .orElse(Collections.emptyList());
             }
 
             @Override
             public List<String> getRoleList(AuthPrincipal principal) {
                 if (Objects.isNull(principal)) {
-                    return List.of();
+                    return Collections.emptyList();
                 }
                 Object loginId = principal.getLoginId();
                 if (Objects.isNull(loginId)) {
-                    return List.of();
+                    return Collections.emptyList();
                 }
                 return userRepository.findByLoginId(String.valueOf(loginId))
                         .map(User::roles)
-                        .map(roles -> (List<String>) List.copyOf(roles))
-                        .orElse(List.of());
+                        .map(roles -> (List<String>) new ArrayList<>(roles))
+                        .orElse(Collections.emptyList());
             }
         };
     }
@@ -129,7 +132,7 @@ public final class RbacConfig {
                 roleRepository.findByCode(roleCode)
                         .ifPresent(role -> allPerms.addAll(role.permissions()));
             }
-            return List.copyOf(allPerms);
+            return new ArrayList<>(allPerms);
         };
     }
 
