@@ -23,6 +23,7 @@ import io.ddd4j.sample.order.domain.event.OrderPaidEvent;
 import io.ddd4j.sample.order.domain.event.OrderShippedEvent;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
@@ -55,7 +56,7 @@ public final class Order extends AggregateRoot<String> {
 
     public static Order draft(String orderNo, String buyerId, String buyerName) {
         Order order = new Order(UUID.randomUUID().toString(), orderNo, buyerId, buyerName,
-                OrderStatus.DRAFT, List.of());
+                OrderStatus.DRAFT, Collections.emptyList());
         order.registerEvent(new OrderCreatedEvent(order.id));
         return order;
     }
@@ -82,7 +83,7 @@ public final class Order extends AggregateRoot<String> {
     }
 
     public List<OrderLine> lines() {
-        return List.copyOf(lines);
+        return Collections.unmodifiableList(new ArrayList<>(lines));
     }
 
     public Money totalAmount() {
