@@ -47,7 +47,7 @@ public class InMemoryEventChunkReader implements EventChunkReader<Object> {
         }
         List<Object> payloads = storedEvents.stream()
                 .map(e -> (Object) e.payload())
-                .toList();
+                .collect(java.util.stream.Collectors.toList());
         long nextPos = storedEvents.get(storedEvents.size() - 1).position() + 1;
         return new EventChunk<>(payloads, nextPos);
     }
