@@ -26,12 +26,14 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.time.Duration;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
-import java.util.List;
+import java.io.BufferedReader;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.nio.charset.StandardCharsets;
+import java.util.Collections;
 import java.util.Objects;
 import java.util.concurrent.TimeUnit;
 
@@ -47,7 +49,7 @@ class VertxOrderRoutesTest {
     @BeforeEach
     void setUp() throws Exception {
         vertx = Vertx.vertx();
-        runtime = Ddd4jVertxRuntime.create(vertx, List.of());
+        runtime = Ddd4jVertxRuntime.create(vertx, Collections.emptyList());
         runtime.start();
         InMemoryOrderAdapters adapters = new InMemoryOrderAdapters();
         OrderApplicationService applicationService = new OrderApplicationService(adapters, adapters, adapters,
@@ -71,37 +73,31 @@ class VertxOrderRoutesTest {
 
     @Test
     void shouldRunSharedOrderUseCasesThroughVertxHttp() throws Exception {
-        HttpClient client = HttpClient.newHttpClient();
         String baseUrl = "http://127.0.0.1:" + server.actualPort();
-        String token = issueToken(client, baseUrl);
-        HttpResponse<String> create = request(client, baseUrl, "POST", "/api/orders", token,
+        String token = issueToken(baseUrl);
+        HttpResponse<String> create = request(baseUrl, "POST", "/api/orders", token,
                 "{\"orderNo\":\"VERTX-001\",\"buyerId\":\"buyer-1\",\"buyerName\":\"Alice\"}");
         assertThat(create.statusCode()).withFailMessage(create.body()).isEqualTo(201);
         String orderId = objectMapper.readTree(create.body()).path("data").path("id").asText();
 
-        HttpResponse<String> line = request(client, baseUrl, "POST", "/api/orders/" + orderId + "/lines", token,
+        HttpResponse<String> line = request(baseUrl, "POST", "/api/orders/" + orderId + "/lines", token,
                 "{\"goodsId\":\"goods-1\",\"goodsName\":\"DDD Book\",\"quantity\":2,\"unitPrice\":59.90}");
         assertThat(line.statusCode()).withFailMessage(line.body()).isEqualTo(200);
         assertThat(objectMapper.readTree(line.body()).path("data").path("totalAmount").decimalValue())
                 .isEqualByComparingTo("119.80");
 
-        HttpResponse<String> missingKey = request(client, baseUrl, "POST", "/api/orders/" + orderId + "/pay", token,
+        HttpResponse<String> missingKey = request(baseUrl, "POST", "/api/orders/" + orderId + "/pay", token,
                 null);
         assertThat(missingKey.statusCode()).withFailMessage(missingKey.body()).isEqualTo(400);
 
-        HttpRequest payment = HttpRequest.newBuilder(URI.create(baseUrl + "/api/orders/" + orderId + "/pay"))
-                .timeout(Duration.ofSeconds(10))
-                .header("Authorization", "Bearer " + token)
-                .header("Idempotency-Key", "vertx-payment-001")
-                .POST(HttpRequest.BodyPublishers.noBody())
-                .build();
-        HttpResponse<String> paid = client.send(payment, HttpResponse.BodyHandlers.ofString());
+        HttpResponse<String> paid = request(baseUrl, "POST", "/api/orders/" + orderId + "/pay", token,
+                null, "vertx-payment-001");
         assertThat(paid.statusCode()).withFailMessage(paid.body()).isEqualTo(200);
         assertThat(objectMapper.readTree(paid.body()).path("data").path("status").asText()).isEqualTo("PAID");
     }
 
-    private String issueToken(HttpClient client, String baseUrl) throws Exception {
-        HttpResponse<String> response = request(client, baseUrl, "POST", "/api/auth/tokens/vertx-user", null, null);
+    private String issueToken(String baseUrl) throws Exception {
+        HttpResponse<String> response = request(baseUrl, "POST", "/api/auth/tokens/vertx-user", null, null);
         JsonNode body = objectMapper.readTree(response.body());
         assertThat(response.statusCode()).withFailMessage(response.body()).isEqualTo(200);
         String token = body.path("data").path("token").asText();
@@ -109,23 +105,66 @@ class VertxOrderRoutesTest {
         return token;
     }
 
-    private HttpResponse<String> request(HttpClient client, String baseUrl, String method, String path, String token,
+    private HttpResponse<String> request(String baseUrl, String method, String path, String token,
                                          String body) throws Exception {
-        HttpRequest.Builder builder = HttpRequest.newBuilder(URI.create(baseUrl + path))
-                .timeout(Duration.ofSeconds(10));
+        return request(baseUrl, method, path, token, body, null);
+    }
+
+    private HttpResponse<String> request(String baseUrl, String method, String path, String token,
+                                         String body, String idempotencyKey) throws Exception {
+        HttpURLConnection connection = (HttpURLConnection) new URL(baseUrl + path).openConnection();
+        connection.setRequestMethod(method);
+        connection.setConnectTimeout(10000);
+        connection.setReadTimeout(10000);
         if (Objects.nonNull(token)) {
-            builder.header("Authorization", "Bearer " + token);
+            connection.setRequestProperty("Authorization", "Bearer " + token);
+        }
+        if (Objects.nonNull(idempotencyKey)) {
+            connection.setRequestProperty("Idempotency-Key", idempotencyKey);
         }
         if (Objects.nonNull(body)) {
-            builder.header("Content-Type", "application/json");
-            builder.method(method, HttpRequest.BodyPublishers.ofString(body));
-        } else {
-            builder.method(method, HttpRequest.BodyPublishers.noBody());
+            byte[] payload = body.getBytes(StandardCharsets.UTF_8);
+            connection.setDoOutput(true);
+            connection.setRequestProperty("Content-Type", "application/json");
+            connection.setFixedLengthStreamingMode(payload.length);
+            try (OutputStream output = connection.getOutputStream()) {
+                output.write(payload);
+            }
         }
-        return client.send(builder.build(), HttpResponse.BodyHandlers.ofString());
+        int statusCode = connection.getResponseCode();
+        InputStream input = statusCode >= 400 ? connection.getErrorStream() : connection.getInputStream();
+        StringBuilder responseBody = new StringBuilder();
+        if (Objects.nonNull(input)) {
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(input, StandardCharsets.UTF_8))) {
+                String line;
+                while (Objects.nonNull(line = reader.readLine())) {
+                    responseBody.append(line);
+                }
+            }
+        }
+        return new HttpResponse<>(statusCode, responseBody.toString());
     }
 
     private <T> T await(Future<T> future) throws Exception {
         return future.toCompletionStage().toCompletableFuture().get(10, TimeUnit.SECONDS);
+    }
+
+    private static final class HttpResponse<T> {
+
+        private final int statusCode;
+        private final T body;
+
+        private HttpResponse(int statusCode, T body) {
+            this.statusCode = statusCode;
+            this.body = body;
+        }
+
+        private int statusCode() {
+            return statusCode;
+        }
+
+        private T body() {
+            return body;
+        }
     }
 }
